src/component/view/option-list/style.scss
.main--list {
    .datagrid {
        &__head {
            th {
                height: 50px;
                font: bold 14px $arial;
            }

            .checkbox input:not(:checked) {
                border: 2px solid $dark-gray-100;
            }
        }

        &__row {
            &--nested {
                td:nth-child(3) {
                    text-indent: 60px;
                }
            }

            td:not([colspan]) {
                // ID
                &:nth-child(3) {
                    div {
                        display: flex;
                        align-items: center;
                    }

                    .icon {
                        color: $gray;
                    }
                }
            }

            .icon-btn {
                &--arrow-rt {
                    &,
                    .icon {
                        width: 20px;
                        height: 20px;
                    }

                    .icon {
                        transition: transform .1s;
                        will-change: transform;
                    }
                }

                &--open {
                    .icon--arrow-rt {
                        transform: translateZ(0) rotateZ(90deg);
                    }
                }
            }

            .badge {
                margin: 0 10px 0 3px;
                background-color: $light-gray-700;
                color: $white;
            }

            .dropdown__select--cell {
                background-color: transparent;
                padding: 0 35px 0 8px;
            }
        }

        th,
        td:not([colspan]) {
            @include gen-tb-cells-width( (65, 80, (270, 2), 220, (75, 3), (50, 3)) );
        }
    }
}

